# AndroidMkDemo

./: build.gradle  log.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/androidmkdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cmake/: CMakeLists.txt  native-lib.c  testffmpeg.cpp
app/src/main/cmake/include/libavutil/: ffversion.h
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChanel.h  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  JavaHelper.cpp  JavaHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.c  safe_queue.cpp  safe_queue.h  testffmpeg.cpp
app/src/main/java/com/example/androidmkdemo/: MainActivity.kt  MyAp.kt  Test.kt
app/src/main/java/com/example/androidmkdemo/listenner/: IPlay.kt
app/src/main/java/com/example/androidmkdemo/utils/: DNFFPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/androidmkdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
